--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   "author": "Amare Diotte",
   "license": "ISC",
   "dependencies": {
+    "@easypost/api": "^5.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.0",
     "express-session": "^1.17.2",
-    "mongoose": "^6.3.1"
+    "mongoose": "^6.3.1",
+    "shipping-ups": "^1.0.0",
+    "ups-nodejs-sdk": "^1.0.0"
   }
 }
